# ChangeLog for games-rpg/freedroidrpg
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/freedroidrpg/ChangeLog,v 1.25 2010/03/24 14:01:55 ranger Exp $

  24 Mar 2010; Brent Baude <ranger@gentoo.org> freedroidrpg-0.13.ebuild:
  stable ppc, bug 307083

  04 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  freedroidrpg-0.13.ebuild:
  stable x86, bug 307083

*freedroidrpg-0.13 (25 Jan 2010)

  25 Jan 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +freedroidrpg-0.13.ebuild, +files/freedroidrpg-0.13-syslibs.patch:
  version bump

  29 Aug 2009; nixnut <nixnut@gentoo.org> freedroidrpg-0.12.1-r1.ebuild:
  ppc stable #275893

  30 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  freedroidrpg-0.12.1-r1.ebuild:
  stable x86, bug 275893

*freedroidrpg-0.12.1-r1 (27 May 2009)

  27 May 2009; Tristan Heaven <nyhm@gentoo.org>
  +freedroidrpg-0.12.1-r1.ebuild, +files/freedroidrpg-0.12.1-syslibs.patch:
  Use system lua and sdl-gfx instead of the bundled versions, bug #252469

*freedroidrpg-0.12.1 (24 Apr 2009)

  24 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +freedroidrpg-0.12.1.ebuild:
  version bump

  18 Mar 2009; Brent Baude <ranger@gentoo.org> freedroidrpg-0.11.1.ebuild:
  stable ppc, bug 261325

  09 Mar 2009; Raúl Porcel <armin76@gentoo.org> freedroidrpg-0.11.1.ebuild:
  x86 stable wrt #261325

*freedroidrpg-0.11.1 (29 Jan 2009)

  29 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +freedroidrpg-0.11.1.ebuild:
  version bump

*freedroidrpg-0.11 (15 Sep 2008)

  15 Sep 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +freedroidrpg-0.11.ebuild:
  version bump

*freedroidrpg-0.10.3 (09 Sep 2007)

  09 Sep 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +freedroidrpg-0.10.3.ebuild:
  version bump

*freedroidrpg-0.10.2 (07 Jul 2007)

  07 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +freedroidrpg-0.10.2.ebuild:
  version bump

*freedroidrpg-0.10.1 (26 Feb 2007)
