@@ -1,5 +1,5 @@
 AUX freedroidrpg-0.13-syslibs.patch 3479 RMD160 42553640361efa864cef3ff93bb1360361df3f89 SHA1 b4758b9b1b08f697a7de9f5b8017e2172ae689e3 SHA256 cb867535e59eca44dcc4bf5b117634092214ab3a0b246ad6494c584f573b052c
 DIST freedroidrpg-0.13.tar.bz2 137389662 RMD160 dfd5d60fb173ba6a9107894b2ba4a6f0d5868116 SHA1 6c58cc88c503a3050ef940158f5e338f70899533 SHA256 e4ed0ba187c0c74ec353345825bbf520bdc6d4d173a66ed6dba6e8e1683ffb8a
-EBUILD freedroidrpg-0.13.ebuild 1392 RMD160 9630f4407ec74a8914859e4f7807a59b54f6542f SHA1 5e8df86d508341c2bae9a8fa2ffeec64c0e49626 SHA256 188f610169f56cf9b53342e937c398eea56d21081bf94c393c2882ca9f679d01
-MISC ChangeLog 3417 RMD160 16edf3075ff9a79164e746bf577a97111b46cd46 SHA1 4bd5a2c3c332032411c947ac2dd5e0736087d04f SHA256 0afed1af4e4cdd0cf2d25ae670de05ae6314b076bf61d669b900b1c03d63100f
+EBUILD freedroidrpg-0.13.ebuild 1513 RMD160 10d4a949981dd6409a32f0c7c2feace10ace5292 SHA1 27ef24e9398122b377ad29c8696830bc4e6ec8e3 SHA256 081a53e7c3d1a5eb9f822343e833e3c333d267873f5f1b202459489f051b67a3
+MISC ChangeLog 3558 RMD160 25aafbd09d7ffcf47f33d5f9635ca78457103380 SHA1 070ae9d8bb41c7abc1d7cf56f4817d4c4b9cc21b SHA256 339552d1a2ff09f537dd2ca24d167b03bb974f4493a69d4ba8653e13e078ce4a
 MISC metadata.xml 2102 RMD160 b4460164b2f9e4bc4cc206fcb7a688afa6f127b7 SHA1 aaa79dbac1d09bda7e33de3cdaaf749ce2c1f0ad SHA256 d06c8ed4ae0f0763859351dfebfad1b41e3d054261fa555ba26e67be0f7b60f1
