@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/freedroidrpg
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/freedroidrpg/ChangeLog,v 1.25 2010/03/24 14:01:55 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/freedroidrpg/ChangeLog,v 1.26 2010/04/19 07:19:26 tupone Exp $
+
+  19 Apr 2010; Tupone Alfredo <tupone@gentoo.org> freedroidrpg-0.13.ebuild:
+  Force python2 version. Fix bug #312275 by arfrever@gentoo.org
 
   24 Mar 2010; Brent Baude <ranger@gentoo.org> freedroidrpg-0.13.ebuild:
   stable ppc, bug 307083
